src/objects/Community_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>All custom settings for the Community will be stored within this object.</description>
    <fields>
        <fullName>Chatter_Action_Disable_Group_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Files Chatter Action and related Group File items will be removed from the Community Portal preventing a User from uploading a file within Unity.</description>
        <inlineHelpText>When selected, the Files Chatter Action and related Group File items will be removed from the Community Portal preventing a User from uploading a file within Unity.</inlineHelpText>
        <label>Chatter Action: Disable Group Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Group_Disable_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Terms page will be disabled during the Create Group process.</description>
        <inlineHelpText>When selected, the Terms page will be disabled during the Create Group process.</inlineHelpText>
        <label>Create Group Disable Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Group_Max_Tags__c</fullName>
        <description>The number provided in this box indicates the max number of Tags a User can apply to a Group.  When NULL, the User can apply as many tags allowed.</description>
        <inlineHelpText>The number provided in this box indicates the max number of Tags a User can apply to a Group.  When NULL, the User can apply as many tags allowed.</inlineHelpText>
        <label>Create Group Max Tags</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Group_Require_Tags__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the User will be required to select at least 1 Tag during the Create Group creation.</description>
        <inlineHelpText>When selected, the User will be required to select at least 1 Tag during the Create Group creation.</inlineHelpText>
        <label>Create Group Require Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Change_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the Change Password page within the Profile will be omitted from the Community Portal.</description>
        <inlineHelpText>When selected, the Change Password page within the Profile will be omitted from the Community Portal.</inlineHelpText>
        <label>Disable Change Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Share Button</description>
        <label>Disable Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Library_Folder__c</fullName>
        <defaultValue>&quot;Image Library&quot;</defaultValue>
        <description>field contains name of image library folder for create news.</description>
        <label>Image Library Folder</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_Accepted_Image_Types__c</fullName>
        <defaultValue>&quot;PNG,GIF,BMP,JPG&quot;</defaultValue>
        <description>Represents the list of acceptable file types when during the News Creation process.</description>
        <inlineHelpText>Represents the list of acceptable file types when during the News Creation process.</inlineHelpText>
        <label>News Accepted Image Types</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_Max_Sticky__c</fullName>
        <description>An organization can define a maximum number of &quot;sticky&quot; (featured) Community News records that are actively published the Community.</description>
        <label>News Max Sticky</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News_Photo_Max_Size__c</fullName>
        <defaultValue>25</defaultValue>
        <description>Represents the max number of Megabytes (MB) as user can upload for the photo attached to the News item.  This number cannot exceed 25MB.</description>
        <inlineHelpText>Represents the max number of Megabytes (MB) as user can upload for the photo attached to the News item.  This number cannot exceed 25MB.</inlineHelpText>
        <label>News Photo Max Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Community Settings</label>
</CustomObject>